--- a/public/style.css
+++ b/public/style.css
@@ -5,6 +5,7 @@
     font-size:larger;
 }
 
+
 #headr{
     position:absolute;
     width:100%;
@@ -38,6 +39,15 @@
     height:70%;
     font-size:1400%;
     background-color: black;
+}
+
+#t2{
+    width:50%;
+    position: absolute;
+    text-align: center;
+    top:60%;
+    left: 30%;
+    height:40%;
 }
 
 #button{
